# sakuramediabe

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  compose.example.yaml  config.example.full.toml  config.example.toml  docker-entrypoint.sh  pyproject.toml  requirements.txt  supervisord.conf
.github/workflows/: docker-publish.yml  joytag-docker-publish.yml
docker/joytag-infer/: Dockerfile.cpu  Dockerfile.cuda  Dockerfile.openvino  requirements.base.txt  requirements.cpu.txt  requirements.cuda.txt  requirements.openvino.txt
docs/: README.md  conventions.md  faq.md
docs/catalog/: actors.md  images.md  movies.md  tags.md
docs/collections/: playlists.md
docs/deployment/: commands.md  docker.md  external-service-tests.md
docs/discovery/: hot-reviews.md  image-search.md  ranking-sources.md
docs/playback/: media-libraries.md  media.md
docs/system/: account.md  auth.md  frontend-resource-task-integration.md  indexer-settings.md  metadata-provider-license.md  movie-desc-translation-settings.md  notifications.md  status.md  task-runs.md
docs/transfers/: downloads.md
lib/metadata-provider/: sakuramedia_metadata_providers-0.1.2-cp310-cp310-linux_x86_64.whl  sakuramedia_metadata_providers-0.1.2-cp310-cp310-macosx_10_15_x86_64.whl  sakuramedia_metadata_providers-0.1.2-cp310-cp310-macosx_11_0_arm64.whl  sakuramedia_metadata_providers-0.1.2-cp310-cp310-win_amd64.whl  sakuramedia_metadata_providers-0.1.3-cp310-cp310-linux_x86_64.whl  sakuramedia_metadata_providers-0.1.3-cp310-cp310-macosx_10_15_x86_64.whl  sakuramedia_metadata_providers-0.1.3-cp310-cp310-macosx_11_0_arm64.whl  sakuramedia_metadata_providers-0.1.3-cp310-cp310-win_amd64.whl  sakuramedia_metadata_providers-0.1.4-cp310-cp310-linux_x86_64.whl  sakuramedia_metadata_providers-0.1.4-cp310-cp310-macosx_10_15_x86_64.whl  sakuramedia_metadata_providers-0.1.4-cp310-cp310-macosx_11_0_arm64.whl  sakuramedia_metadata_providers-0.1.4-cp310-cp310-win_amd64.whl  sakuramedia_metadata_providers-0.1.6-cp310-cp310-linux_x86_64.whl  sakuramedia_metadata_providers-0.1.6-cp310-cp310-macosx_10_15_x86_64.whl  sakuramedia_metadata_providers-0.1.6-cp310-cp310-macosx_11_0_arm64.whl  sakuramedia_metadata_providers-0.1.6-cp310-cp310-win_amd64.whl
scripts/: check_javdb_live_contract.py  explore_javdb_hot_reviews.py
src/api/: app.py
src/common/: __init__.py  database.py  file_signatures.py  logging.py  movie_numbers.py  runtime_time.py  service_helpers.py  subtitle_paths.py
src/config/: __init__.py  config.py
src/metadata/: __init__.py  factory.py  gfriends.py  javdb.py  license_runtime.py  provider.py
src/model/: __init__.py  base.py  enums.py  expressions.py  mixins.py
src/scheduler/: __init__.py  logging.py  progress.py  registry.py  runner.py
src/service/: __init__.py
src/start/: aps.py  commands.py  initdb.py  recovery.py  startapi.py
tests/: conftest.py
tests/api/: test_account_api.py  test_activity_api.py  (+19 more)
(+227 files in other folders)
