[tool.poetry]
name = "sakuramediabe"
version = "0.1.0"
description = ""
authors = ["tinypinglite <tinyping@proton.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.110.1"
uvicorn = "^0.22.0"
loguru = "^0.7.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
peewee = "^3.16.2"
requests = "^2.31.0"
tqdm = "^4.65.0"
qbittorrent-api = "^2023.6.49"
xmltodict = "^0.13.0"
libtorrent = "^2.0.9"
pycryptodome = "^3.18.0"
gevent = "^22.10.2"
ffmpy = "^0.3.0"
python-multipart = "^0.0.6"
bcrypt = "^4.0.1"
pytest = "^7.4.0"
torrent-parser = "^0.4.1"
pydantic-settings = "^2.2.1"
opencv-python-headless = "4.10.0.84"
apscheduler = "^3.10.4"
pydantic = "^2.7.4"
pillow = "10.4.0"
toml = "^0.10.2"
psycopg2-binary = "^2.9.10"
minio = "^7.2.15"
pylint = "^3.3.7"
httpx = "^0.27.2"
openvino = "2025.4.1"
lancedb = "^0.6.8"
poetry-plugin-export = "^1.10.0"
pymysql = "^1.1.2"
numpy = "<2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

